--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
   },
   "extends": [
     "airbnb-typescript",
-    "airbnb/hooks",
+    "airbnb/hooks"
     // "plugin:@typescript-eslint/recommended",
     // "plugin:@typescript-eslint/recommended-requiring-type-checking"
   ],
@@ -45,37 +45,37 @@
     }
   },
   "rules": {
-  //   "@typescript-eslint/indent": ["error", 2],
-  //   "@typescript-eslint/no-this-alias": "error",
-  //   "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
-  //   "@typescript-eslint/no-unused-expressions": ["error"],
-  //   "@typescript-eslint/no-unused-vars": "error",
-  //   "@typescript-eslint/no-non-null-assertion": "off",
-  //   "@typescript-eslint/quotes": [
-  //     "error",
-  //     "single",
-  //     {
-  //       "avoidEscape": true
-  //     }
-  //   ],
-  //   "@typescript-eslint/semi": [
-  //     "error",
-  //     "always"
-  //   ],
-  //   "@typescript-eslint/member-delimiter-style": [
-  //     "error",
-  //     {
-  //       "multiline": {
-  //         "delimiter": "semi",
-  //         "requireLast": true
-  //       },
-  //       "singleline": {
-  //         "delimiter": "semi",
-  //         "requireLast": false
-  //       }
-  //     }
-  //   ],
-  //   "@typescript-eslint/dot-notation": "off",
+    //   "@typescript-eslint/indent": ["error", 2],
+    //   "@typescript-eslint/no-this-alias": "error",
+    //   "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
+    //   "@typescript-eslint/no-unused-expressions": ["error"],
+    //   "@typescript-eslint/no-unused-vars": "error",
+    //   "@typescript-eslint/no-non-null-assertion": "off",
+    //   "@typescript-eslint/quotes": [
+    //     "error",
+    //     "single",
+    //     {
+    //       "avoidEscape": true
+    //     }
+    //   ],
+    //   "@typescript-eslint/semi": [
+    //     "error",
+    //     "always"
+    //   ],
+    //   "@typescript-eslint/member-delimiter-style": [
+    //     "error",
+    //     {
+    //       "multiline": {
+    //         "delimiter": "semi",
+    //         "requireLast": true
+    //       },
+    //       "singleline": {
+    //         "delimiter": "semi",
+    //         "requireLast": false
+    //       }
+    //     }
+    //   ],
+    //   "@typescript-eslint/dot-notation": "off",
     "arrow-parens": [
       "error",
       "as-needed"
