--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-leaflet": "^3.0.4",
     "react-router-dom": "^5.2.0",
     "react-svg-loader": "^3.0.3",
+    "recharts": "^1.8.5",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "svgo": "^1.3.2",
