--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "svgo-all": "svgo -r -f src --pretty --indent=2 --disable=removeViewBox,mergePaths --enable=inlineStyles  --config '{ \"plugins\": [ { \"inlineStyles\": { \"onlyMatchedOnce\": false } }] }' $FILE"
   },
   "dependencies": {
-    "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@types/classnames": "^2.2.10",
     "@types/copy-webpack-plugin": "^6.0.0",
     "@types/html-webpack-plugin": "^3.2.3",
@@ -44,7 +44,6 @@
     "@types/webpack-dev-server": "^3.11.0",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
-    "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "classnames": "^2.2.6",
     "copy-webpack-plugin": "^6.1.1",
@@ -63,16 +62,19 @@
     "glob-all": "^3.2.1",
     "html-webpack-plugin": "^4.5.0",
     "husky": "^4.3.0",
+    "leaflet": "^1.7.1",
     "lint-staged": "^10.4.0",
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-cookie": "^4.0.3",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
+    "react-leaflet": "^3.0.4",
     "react-router-dom": "^5.2.0",
     "react-svg-loader": "^3.0.3",
+    "recharts": "^1.8.5",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "svgo": "^1.3.2",
@@ -86,5 +88,14 @@
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@types/leaflet": "^1.5.19",
+    "@types/mapbox-gl": "^2.0.0",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-react-transform": "^3.0.0",
+    "babel-polyfill": "^6.26.0"
   }
 }
